--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@error_harry/medium-validation": "^1.0.0",
     "axios": "^1.7.7",
+    "jose": "^5.9.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
